fixed mobile responsive spacings

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -246,8 +246,10 @@ footer {
       }
     }
     nav {
+      margin-top: 20px;
       justify-content: center;
       svg {
+        padding: 10px;
         width: 80px;
         height: 48px;
       }
@@ -273,6 +275,7 @@ footer {
       }
       .burger {
         display: block;
+        padding: 10px;
       }
       .burger.active {
         div:first-child{
@@ -309,6 +312,12 @@ footer {
   header {
     nav {
       margin-top: 15px;
+      svg {
+        padding: 10px;
+      }
+      .burger {
+        padding: 10px;
+      }
     }
   }
 
